Add sass summary data download

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -62,6 +62,12 @@
                 <div class="table-container ajax-container">
                     <div class="table-title">
                         SASS Summary
+                        <div class="download-top-container">
+                            Download summary data :
+                            <button class="btn btn-info download-summary-as-csv">
+                                Download as CSV
+                            </button>
+                        </div>
                     </div>
                     <table class="table table-condensed table-striped sass-summary-table">
                         <thead>
