--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -76,6 +76,12 @@
                             </tr>
                             </tbody>
                         </table>
+                        <div class="download-container">
+                            Download summary data :
+                            <button class="btn btn-info download-summary-as-csv">
+                                Download as CSV
+                            </button>
+                        </div>
                     </div>
                     <div class="vertical-space"></div>
                     <div class="table-container">
