--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -36,14 +36,22 @@
         <h2 class="dashboard-title">SASS Dashboard</h2>
         <div class="row">
             <div class="col-md-12">
-                <div class="map-container ajax-container" id="map"></div>
+                <div class="map-container ajax-container">
+                    <div class="chart-title">Map
+                        <i data-download-title="SASS charts"
+                           data-toggle="tooltip" data-placement="left"
+                           title="Download map as PNG"
+                           class="fa fa-download pull-right download-icon download-map"></i>
+                    </div>
+                    <div id="map"></div>
+                </div>
                 <div class="vertical-space"></div>
                 <div class="chart-container ajax-container">
                     <div class="chart-title">SASS Charts
                         <i data-download-title="SASS charts"
                            data-toggle="tooltip" data-placement="left"
                            title="Download charts"
-                           class="fa fa-download pull-right download-chart"></i>
+                           class="fa fa-download pull-right download-icon download-chart"></i>
                     </div>
                     <div class="row no-padding">
                         <div class="col-md-4">
@@ -139,7 +147,7 @@
                         <i data-download-title="Biotope ratings"
                            data-toggle="tooltip" data-placement="left"
                            title="Download chart"
-                           class="fa fa-download pull-right download-chart"></i>
+                           class="fa fa-download pull-right download-icon download-chart"></i>
                         <div>
                             <canvas id="biotope-ratings-chart"></canvas>
                         </div>
