Add missing download map button

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -37,6 +37,12 @@
         <div class="row">
             <div class="col-md-7">
                 <div class="map-container ajax-container">
+                    <div class="chart-title">Map
+                        <i data-download-title="SASS charts"
+                           data-toggle="tooltip" data-placement="left"
+                           title="Download map as PNG"
+                           class="fa fa-download pull-right download-icon download-map"></i>
+                    </div>
                     <div id="map"></div>
                 </div>
             </div>
