--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -220,6 +220,19 @@
                         </div>
                         <canvas id="biotope-ratings-chart"></canvas>
                     </div>
+                    <div class="vertical-space"></div>
+                    <div class="table-container">
+                        <div class="table-title">
+                            Data Sources
+                        </div>
+                        <div class="data-content">
+                            <ul id="data-source-list">
+                                {% for data_source in data_sources %}
+                                    <li>{{ data_source }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
