Ecological chart for single site SASS dashboard (#848)
* Create a template chart for ecological chart

* Add border color

* Get correct ecoregion data

* Update E/F category

* Improve chart's tooltip

* Fix tooltip title

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -34,6 +34,7 @@
             const sassTaxonData = {{ sass_taxon_table_data.sass_taxon_data | safe }};
             const biotopeData = {{ sass_taxon_table_data.biotope_data | safe }};
             const sensitivityChartData = {{ sensitivity_chart_data | safe }};
+            const ecologicalChartData = {{ ecological_chart_data | safe }};
             const biotopeRatingData = {{ biotope_ratings_chart_data.rating_data | safe }};
             const biotopeRatingLabels = {{ biotope_ratings_chart_data.biotope_labels | safe }};
             const riverCatchments = {% if river_catchments %}{{ river_catchments | safe }}{% else %}[]{% endif %};
@@ -219,6 +220,11 @@
                                class="fa fa-download pull-right download-icon download-chart"></i>
                         </div>
                         <canvas id="biotope-ratings-chart"></canvas>
+                    </div>
+                    <div class="vertical-space"></div>
+                    <div class="chart-container">
+                        <div class="chart-title">Ecological category</div>
+                        <canvas id="ecological-category-chart"></canvas>
                     </div>
                     <div class="vertical-space"></div>
                     <div class="table-container">
