Add description for proportion of sensitive to tolerant taxa

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -202,8 +202,15 @@
                     </div>
                     <div class="vertical-space"></div>
                     <div class="chart-container">
-                        <div class="chart-title">Proportion of sensitive to
-                            tolerant
+                        <div class="chart-title">
+                            <span data-toggle="tooltip" data-placement="top"
+                               title="Proportions based on sensitivity weightings as follows:
+                               Highly tolerant (1 to 3),
+                               Tolerant (4 to 7),
+                               Sensitive (8 to 11),
+                               Highly sensitive (12 to 15)">
+                                Proportion of sensitive to tolerant
+                            </span>
                             <i data-download-title="Proportion of sensitive to tolerant"
                                data-toggle="tooltip" data-placement="left"
                                title="Download chart"
