All 3 fish charts working

--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -27,7 +27,9 @@
         <h3>Biodiversity Data</h3>
         <div class="container-fluid">
             <div class="biodiversity-data-types row">
-                <canvas id="fish-origin-chart"></canvas>
+                <canvas id="fish_origin_chart"></canvas>
+                <canvas id="fish_cons_status_chart"></canvas>
+                <canvas id="fish_endemism_chart"></canvas>
                 <div class="col-3">
                     Occurences
                 </div>
