Further alignment and styling updates

--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -85,8 +85,8 @@
                     <canvas id="algae_cons_status_chart"></canvas>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-3">
+           <div class="row" style="text-align: center;">
+                 <div class="col-3" style="text-align: left;">
                     No. of taxa
                 </div>
                 <div class="col-3">
@@ -99,14 +99,79 @@
                     <%= number_of_taxa[2] %>
                 </div>
             </div>
+            <div class="row" style="text-align: center;">
+                 <div class="col-3" style="text-align: left;">
+                    Ecological Condition
+                </div>
+                <div class="col-3">
+                    <%= ecological_condition[0] %>
+                </div>
+                <div class="col-3">
+                    <%= ecological_condition[1] %>
+                </div>
+                <div class="col-3">
+                    <%= ecological_condition[2] %>
+                </div>
+            </div>
             <div class="row">
-                Ecological Condition
+                <div class="col-3" style="align-self: center">
+                    View Detailed Dashboard
+                </div>
+                <div class="col-3">
+                    <div class="fbis-button-small"><span>View Fish</span></div>
+                </div>
+                <div class="col-3">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="fbis-button-small"><span>View SASS</span></div>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="fbis-button-small">
+                                <span>View Invertebrates</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="fbis-button-small">
+                        <span>View Algae</span>
+                    </div>
+                </div>
             </div>
-            <div>
-                View Detailed Dashboard
-            </div>
-            <div>
-                Upload Data
+            <div class="row">
+                <div class="col-3" style="align-self: center">
+                    Upload Data
+                </div>
+                <div class="col-3">
+                    <div class="fbis-button-small">
+                        <span>Upload Fish</span>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="fbis-button-small">
+                                <span>Upload SASS</span>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="fbis-button-small">
+                                <span>Upload Invertebrates</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="fbis-button-small">
+                        <span>Upload Algae</span>
+                    </div>
+                </div>
             </div>
         </div>
 	</div>
