--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -192,3 +192,39 @@ h6 {
   box-shadow: inset 1px 1px 6px rgba(0,0,0, 0.2);
   color: white;
 }
+
+.fbis-button-small {
+    background-color: #18A090;
+    border-radius: 2px;
+    padding: 0.05rem;
+    font-weight: normal;
+    color: white;
+    border-color: white;
+    border-style: solid;
+    height: 100%;
+    border-width: 1px;
+    text-align: center;
+}
+
+.fbis-button-smal-:hover {
+  background-color: #6BC0B5;
+  color: white;
+}
+
+.fbis-button-small:active {
+  background-color: #17766B;
+  box-shadow: inset 1px 1px 6px rgba(0,0,0, 0.2);
+  color: white;
+}
+
+.fbis-button-small span {
+  align-items: center;
+  height: 100%;
+  display: inline-flex;
+}
+
+.fbis-center-text {
+  align-items: center;
+  height: 100%;
+  display: inline-flex;
+}
