--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -77,7 +77,8 @@ html, body, .map, .map-wrapper, #map-container {
     right: 0;
     position: absolute;
     height: 100%;
-    width: 265px;
+    width: 40vw;
+    min-width: 260px;
     pointer-events: none;
 }
 
@@ -87,7 +88,8 @@ html, body, .map, .map-wrapper, #map-container {
     position: relative;
     height: 100%;
     width: 100%;
-    max-width: 400px;
+    max-width: 40vw;
+    min-width: 400px;
     background: rgb(255, 255, 255);
     color: #4e4e4e;
     z-index: 2000;
