--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -206,25 +206,38 @@ h6 {
     text-align: center;
 }
 
-.fbis-button-smal-:hover {
-  background-color: #6BC0B5;
-  color: white;
+.fbis-button-small:hover {
+    background-color: #6BC0B5;
+    color: white;
+    cursor: pointer;
 }
 
 .fbis-button-small:active {
-  background-color: #17766B;
-  box-shadow: inset 1px 1px 6px rgba(0,0,0, 0.2);
-  color: white;
+    background-color: #17766B;
+    box-shadow: inset 1px 1px 6px rgba(0,0,0, 0.2);
+    color: white;
 }
 
 .fbis-button-small span {
-  align-items: center;
-  height: 100%;
-  display: inline-flex;
+    align-items: center;
+    height: 100%;
+    display: inline-flex;
 }
 
 .fbis-center-text {
-  align-items: center;
-  height: 100%;
-  display: inline-flex;
+    align-items: center;
+    height: 100%;
+    display: inline-flex;
+}
+
+.fbis-red {
+    background-color: #8d2641 !important;
+}
+
+.fbis-red:hover {
+    background-color: #B77282 !important;
+}
+
+.fbis-red:active {
+    background-color: #641F30 !important;
 }
